using GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Model.Aggregates;
using GoldMetrics.GoldCheck.Platform.Shared.Domain.Repositories;

namespace GoldMetrics.GoldCheck.Platform.ReportingNotifications.Domain.Repositories;

public interface IReportRepository : IBaseRepository<Report>
{
}